<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignInActivity">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="-200dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="96dp"
            android:layout_height="83dp"
            android:src="@drawable/logo" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="34dp" />

        <TextView
            style="@style/Theme.Text.Header.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textColor="@color/text_primary"
            android:theme="@style/Theme.Text.Header.2" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="6dp" />

        <TextView
            style="@style/Theme.Text.Subtitle.2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_subtitle"
            android:textColor="@color/text_secondary"
            android:theme="@style/Theme.Text.Subtitle.2" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintWidth_max="400dp">

        <EditText
            android:id="@+id/fieldEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_outline_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="1dp"
            android:paddingBottom="16dp"
            android:textColor="@color/text_primary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            android:id="@+id/fieldPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_outline_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            android:paddingTop="16dp"
            android:paddingEnd="1dp"
            android:paddingBottom="16dp"
            android:textColor="@color/text_primary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="5dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/forgot_password"
            android:textColor="@color/text_secondary" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSignIn"
            style="@style/Theme.Button.Fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in"
            android:theme="@style/Theme.Button.Fill" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_btn_sign_up"
                android:textColor="@color/text_primary" />

            <Space
                android:layout_width="6dp"
                android:layout_height="match_parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto_bold"
                android:text="@string/sign_up"
                android:textColor="@color/text_primary" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>