<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.SignUpActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:rotation="90"
            android:src="@drawable/angle_small_down"
            tools:ignore="ContentDescription" />

        <Space
            android:layout_width="10dp"
            android:layout_height="match_parent" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:textColor="@color/text_primary" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="-300dp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="120dp"
            android:layout_height="120dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/icon_panda"
                tools:ignore="ContentDescription" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="1dp"
                android:background="@drawable/icon_bottom"
                android:backgroundTint="#60000000"
                android:gravity="center"
                app:layout_constraintBottom_toBottomOf="parent">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:rotation="180"
                    android:src="@drawable/angle_small_down"
                    app:tint="@color/white"
                    tools:ignore="ContentDescription" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
        app:layout_constraintWidth_max="400dp">

        <EditText
            style="@style/Theme.Input.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="username"
            android:hint="@string/full_name"
            android:inputType="text"
            android:theme="@style/Theme.Input.Outline" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            style="@style/Theme.Input.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_outline_bg"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:theme="@style/Theme.Input.Outline" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            style="@style/Theme.Input.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:theme="@style/Theme.Input.Outline" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <EditText
            style="@style/Theme.Input.Outline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="password"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:theme="@style/Theme.Input.Outline" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="30dp" />

        <Button
            style="@style/Theme.Button.Fill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:theme="@style/Theme.Button.Fill" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>