<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.OnboardingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/onboarding_image_1"
            tools:ignore="ContentDescription" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="100dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:minHeight="120dp"
            android:orientation="vertical"
            android:paddingStart="20dp"
            android:paddingEnd="20dp">

            <TextView
                android:id="@+id/textHeader"
                style="@style/Theme.Text.Header.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:theme="@style/Theme.Text.Header.2" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <TextView
                android:id="@+id/textSubtitle"
                style="@style/Theme.Text.Subtitle.2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/onboarding_subtitle_1"
                android:textAlignment="center"
                android:theme="@style/Theme.Text.Subtitle.2" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:paddingStart="10dp"
        android:paddingEnd="10dp">

        <TextView
            android:id="@+id/btnBack"
            style="@style/Theme.Text.Body.1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/back"
            android:textColor="@android:color/transparent"
            android:theme="@style/Theme.Text.Body.1" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <View
                android:id="@+id/slider_1"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginEnd="6dp"
                android:background="@drawable/onboarding_slider_select"
                app:layout_constraintEnd_toStartOf="@+id/slider_2"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/slider_2"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:background="@drawable/onboarding_slider_unselect"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:ignore="MissingConstraints" />

            <View
                android:id="@+id/slider_3"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_marginStart="6dp"
                android:background="@drawable/onboarding_slider_unselect"
                app:layout_constraintStart_toEndOf="@+id/slider_2"
                tools:ignore="MissingConstraints" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/btnNext"
            style="@style/Theme.Text.Body.1M"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:text="@string/next"
            android:textColor="@color/text_primary"
            android:theme="@style/Theme.Text.Body.1M"
            tools:ignore="UnusedAttribute" />

    </LinearLayout>

</LinearLayout>